samples/_failures_safe/1761500925_c16527_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4b20b57.c: In function ‘main’:
./samples/SAFE/__tmp_b4b20b57.c:133:5: error: expected identifier or ‘(’ at end of input
  133 |     Matrix mat1, mat2,
      |     ^~~~~~
./samples/SAFE/__tmp_b4b20b57.c:133:5: error: expected declaration or statement at end of input
